--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=${SPRING_APP_NAME:springsecsection1}
-spring.security.user.name=${SECURITY_USERNAME:eazybytes}
-spring.security.user.password=${SECURITY_PASSWORD:12345}
-logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
-
+spring.application.name=${SPRING_APP_NAME:security}
+# Comment out custom username/password to enable default password generation
+spring.security.user.name=${SECURITY_USERNAME:bharat}
+spring.security.user.password=${SECURITY_PASSWORD:123456}
+# logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:INFO}
+logging.level.org.springframework.boot.autoconfigure.security=INFO
+logging.level.org.springframework.security=INFO
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
+test.msg=RZP
