--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,25 @@
 spring.application.name=${SPRING_APP_NAME:security}
-# Comment out custom username/password to enable default password generation
-spring.security.user.name=${SECURITY_USERNAME:bharat}
-spring.security.user.password=${SECURITY_PASSWORD:123456}
-# logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:INFO}
-logging.level.org.springframework.boot.autoconfigure.security=INFO
-logging.level.org.springframework.security=INFO
-logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
-test.msg=RZP
+# ANSI Color Output - Enable colored logs in IDE consoles
+spring.output.ansi.enabled=${SPRING_OUTPUT_ANSI_ENABLED:always}
+
+# Logging Configuration
+# Application-specific logging levels
+logging.level.com.bharat.security=${APP_LOG_LEVEL:DEBUG}
+logging.level.root=${ROOT_LOG_LEVEL:INFO}
+
+# Spring Security logging (can be overridden via environment variable)
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:DEBUG}
+logging.level.org.springframework.boot.autoconfigure.security=${SPRING_SECURITY_LOG_LEVEL:DEBUG}
+
+# Log file location (logback-spring.xml handles the actual file appenders)
+logging.file.name=logs/application.log
+logging.file.path=logs
+
+# Colored console log pattern optimized for IDE display
+# %clr() is Spring Boot's color conversion pattern
+# Colors: timestamp (faint), level (highlighted), thread (faint), logger (cyan), message (default)
+logging.pattern.console=${LOGPATTERN_CONSOLE:%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx}
+
+# File log pattern (no colors for file output)
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%thread] %logger{36} - %msg%n
