--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,9 @@ logging.level.org.springframework.boot.autoconfigure.security=${SPRING_SECURITY_
 logging.file.name=logs/application.log
 logging.file.path=logs
 
-# Colored console log pattern optimized for IDE display
-# %clr() is Spring Boot's color conversion pattern
-# Colors: timestamp (faint), level (highlighted), thread (faint), logger (cyan), message (default)
-logging.pattern.console=${LOGPATTERN_CONSOLE:%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx}
+# Console log pattern - logback-spring.xml takes precedence and handles colors
+# Remove this line if colors still don't work, as logback-spring.xml should be the source of truth
+# logging.pattern.console is commented out to let logback-spring.xml handle it
 
 # File log pattern (no colors for file output)
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%thread] %logger{36} - %msg%n
