--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,21 @@
 			<artifactId>jansi</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<!-- MongoDB for optimistic/pessimistic locking demonstration -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<!-- MySQL for optimistic/pessimistic locking demonstration -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
