--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,23 @@ logging.file.path=logs
 
 # File log pattern (no colors for file output)
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%thread] %logger{36} - %msg%n
+
+# ==================== Database Configuration ====================
+
+# MySQL Configuration (for JPA/Hibernate)
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:security_db}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:rootpassword}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://${MONGODB_USER:admin}:${MONGODB_PASSWORD:adminpassword}@${MONGODB_HOST:localhost}:${MONGODB_PORT:27017}/${MONGODB_DATABASE:security_db}?authSource=admin
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.transactions.enabled=true
